src/scss/style.scss
/* ... */
/*
 * slide-fade
 */
@keyframes slide-fade-in-move {
  0% {
    transform: translateX(1.5rem);
  }
  100% {
    transform: translateX(0);
  }
}

@keyframes slide-fade-out-move {
  0% {
    transform: translateX(0);
  }
  100% {
    transform: translateX(-1.5rem);
  }
}

@keyframes slide-fade-in-backwards-move {
  0% {
    transform: translateX(0);
  }
  100% {
    transform: translateX(1.5rem);
  }
}

@keyframes slide-fade-out-backwards-move {
  0% {
    transform: translateX(-1.5rem);
  }
  100% {
    transform: translateX(0);
  }
}

/* .zoom-fade {
  transition: .15s ease-in-out opacity, .15s ease-in-out transform;
  transform: scale3d(1.1, 1.1, 1);
  opacity: 0;
  display: flex;

  &.active {
    transform: scale3d(1, 1, 1);
    transform-origin: center;
    opacity: 1;
  }
} */

// *:not(input):not(textarea) {
//   -webkit-user-select: none; /* disable selection/Copy of UIWebView */
//   -webkit-touch-callout: none; /* disable the IOS popup when long-press on a link */
// }   

middle-ellipsis-element {
  width: 100%;
	overflow: hidden;
	display: block;
}

.album-item {
  &-media {
    width: 100%;
    height: 100%;
  }
}

.row {
  min-height: 3.375rem;
  margin-top: .5rem;
  position: relative;
  padding: .5rem .75rem;
  display: flex;
  flex-direction: column;
  justify-content: center;

  &-with-padding {
    padding-left: 4.375rem;

    .row-title.tgico:before {
      position: absolute;
      left: .75rem;
      font-size: 1.5rem;
      color: #707579;
    }
  }

  &-clickable {
    cursor: pointer;
    border-radius: $border-radius-medium;
    overflow: hidden;
  }

  .radio-field {
    &-main {
      padding-left: 3.375rem;
      margin-left: -3.375rem;
    }
  }

  &-subtitle {
    color: #707579 !important;
    font-size: 14px !important;
  }
}

.hover-effect {
  @include hover-background-effect();
}

.progress-ring {
  position: absolute;
  top: 0;
  left: 0;
  pointer-events: none;

  &__circle {
    transition: stroke-dashoffset;
    stroke-linecap: round;
  }
}

.rlottie, .rlottie-vector {
  left: 0;
  top: 0;
  bottom: 0;
  right: 0;
  position: absolute;
  max-width: 100%;
  max-height: 100%;
  width: 100%;
  height: 100%;
}

.rlottie.fade-in {
  animation: fade-in-opacity .2s ease-in-out forwards;
}

.rlottie-vector {
  fill: rgba(0, 0, 0, .08);
}

.media-photo, .media-video, .media-sticker, .media-round {
  position: absolute;
  top: 0;
  right: 0;
  bottom: 0;
  left: 0;

  &.fade-in {
    animation: fade-in-opacity .2s ease-in-out forwards;
  }

  &.fade-out {
    animation: fade-out-opacity .2s ease-in-out forwards;
  }
}

.media-video {
  z-index: 1; // * overflow media-photo
}

.media-sticker {
  margin: auto;
}

.media-round {
  max-width: 200px;
  max-height: 200px;
  z-index: 1;

  canvas {
    width: 100%;
    height: 100%;
    border-radius: 50%;
    position: relative;
  }

  .video-time {
    padding: 1px 6px 2px 7px;
    background-color: rgba(0, 0, 0, .23) !important;
  }

  &.is-paused .video-time {
    &:after {
      content: $tgico-nosound;
      padding-left: .25rem;
      display: flex;
      align-items: center;
      font-size: 1.125rem;
    }
  }
}

